--- a/src/styles/Widgets/Widgets.css
+++ b/src/styles/Widgets/Widgets.css
@@ -18,6 +18,8 @@
 .widgets__input > input {
   border: none;
   background-color: var(--baithak-background);
+    outline: none;
+    width: 100%;
 }
 
 .widgets__searchIcon {
