--- a/src/styles/Widgets/Widgets.css
+++ b/src/styles/Widgets/Widgets.css
@@ -13,6 +13,9 @@
   border-radius: 20px;
   margin-top: 10px;
   margin-left: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
 .widgets__input > input {
